# amp-vibe-analyzer

./: README.md
code_STM32/: .cproject  .mxproject  .project  STM32F407VGTX_FLASH.ld  build.ps1  code (1).launch  code Debug.launch  code.ioc  debug.ps1  flash.ps1  setup_openocd.ps1
code_STM32/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
code_STM32/Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
code_STM32/Debug/: code.elf  code.map  makefile  objects.list  sources.mk
code_STM32/Debug/Core/Src/: freertos.cyclo  freertos.d  freertos.su  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
code_STM32/Debug/Core/Startup/: subdir.mk
code_STM32/Debug/FATFS/App/: fatfs.d  subdir.mk
code_STM32/Debug/user/fonts/: asc12.d  asc16.d  hz12.d  hz16.d  hz24.d  hz32.d  ra8875_asc_width.d  subdir.mk
code_STM32/docs/: LVGL内存与刷新优化工作计划.md  SD卡接入与数据持久化工作任务.md  STM32+RA8875内置触摸ADC方案五点校准实操指南.md  产品需求文档PRD.md  八通道采集与主监控显示工作任务.md  报错列表.md  旋转设备电流与振动信号采集分析软件需求汇总文档.docx  界面功能工作汇报.md  通道采集逻辑梳理与任务列表.md  项目说明文档.md
code_STM32/pc_simulator/: CMakeLists.txt  build_and_run.ps1  lv_conf.h  main.c
code_STM32/pc_simulator/sd_root/AlarmData/: alarms.csv
code_STM32/pc_simulator/sd_root/Config/: acq_settings.json
code_STM32/pc_simulator/sd_root/RealData/2026/07/: 1783759036-Vib_X.csv  1783759487-Vib_X.csv
code_STM32/pc_simulator/test_data/: envelope_test.csv
code_STM32/tools/: gdb_batch.gdb  gdb_check_gui.gdb  gdb_run.gdb  gdbinit
code_STM32/user/app/inlcude/: acq_pipeline.h  acq_task.h  alarm_manager.h  app_cfg.h  channel_data.h  config.h  config_store.h  data_logger.h  form_dso_2ch.h  form_dso_xy.h  param.h  signal_algo.h  touch_bsp_calib.h  touch_bsp_test.h  touch_bsp_touch.h  touch_calib.h  vol_statistics.h  wave_disp_2ch.h  wave_disp_xy.h
code_STM32/user/app/src/: acq_pipeline.c  acq_task.c  alarm_manager.c  channel_data.c  config_store.c  data_logger.c  form_dso_2ch.c  form_dso_xy.c  param.c  signal_algo.c  touch_bsp_calib.c  touch_bsp_test.c  (+4 more)
code_STM32/user/fonts/: fonts.h  hz16.c  hz24.c
(+348 files in other folders)
